add sanitizer to new and create route

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,8 +1,11 @@
 <% include partials/header %>
 
-    <div class="ui main text container segment">
+    <div class="ui main text container">
+        <div class="ui huge header">
+
+        </div>
         <h1>The
-            <%=blogs.title%> PAGE</h1>
+            <%=blog.title%> PAGE</h1>
 
         <% blogs.forEach(function(blog){%>
             <div>
