--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,23 +2,38 @@
 
     <div class="ui main text container">
         <div class="ui huge header">
-
+            RESTful Blog App
         </div>
-        <h1>The
-            <%=blog.title%> PAGE</h1>
+        <div class="ui top attached segment">
+            <div class="ui divided items">
+                <% blogs.forEach(function(blog){%>
+                    <div class="item">
+                        <div class="image">
+                            <img src="<%=blog.image %>">
+                        </div>
+                        <div class="content">
+                            <a href="/blogs/<%=blog._id%>">
+                                <%=blog.title %>
+                            </a>
+                            <div class="meta">
+                                <span><%=blog.created.toDateString() %></span>
+                            </div>
+                            <div class="description">
+                                <p>
+                                    <%- blog.body.substring(0, 100) %>...
+                                </p>
+                            </div>
+                            <div class="extra">
+                                <a class="ui floated basic violet button" href="/blogs/<%=blog._id%>">Read More
+                        <i class="right chevron icon"></i>
+                        </a>
+                            </div>
+                        </div>
 
-        <% blogs.forEach(function(blog){%>
-            <div>
-                <h3>
-                    <%=blog.title %>
-                </h3>
-                <img src="<%=blog.image%>" />
-                <p><span><%=blog.created.toDateString() %></span></p>
-                <p>
-                    <%= blog.body.substring(0, 100) %>...
-                </p>
-                <a href="/blogs/<%=blog._id%>">Read More</a>
+                    </div>
+
+                    <% }); %>
             </div>
-            <% }); %>
+        </div>
     </div>
     <% include partials/footer %>
